# claude-project-harness

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  new-project-guide.html  new-project.sh  publish.sh  pyproject.toml  spec.template.yaml
.claude/: settings.json
.claude/agents/: doc-updater.md  implementer.md  planner.md  validator.md
.claude/commands/: autoloop.md  publish.md
.claude/hooks/: block_access.py  block_dangerous_commands.sh  block_env_read.py  block_repo_delete.sh  block_stable_merge.sh  check_commit_message.py  enforce_src_layout.py  log_writer.py  sensitive_paths.txt  update_claude_md.py
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: autoloop_vs_ralph_hybrid.md  context_management_plan.md
mcp/: .mcp.json  README.md
rules/: autonomous_workflow.md  coding_conventions.md  commit_conventions.md  context_management.md  doc_update_rules.md  env_management.md  project_structure.md  repo_naming.md  workflow.md
tests/: test_evaluate.py  test_smoke.py
tools/: evaluate.py
